[gd_scene load_steps=5 format=3 uid="uid://dntudjvbxrfga"]

[ext_resource type="Script" uid="uid://cjmq5x1yccdod" path="res://levels/DiagnosticsApp.gd" id="1_35om0"]
[ext_resource type="Texture2D" uid="uid://bwx6lbklg3swi" path="res://protag/phone/diagnostics assets/HEART_PNG.png" id="2_35om0"]
[ext_resource type="Texture2D" uid="uid://b0enf1h3anukc" path="res://protag/phone/diagnostics assets/thermo.png" id="3_cbd4u"]
[ext_resource type="Texture2D" uid="uid://b5hofo5wws5ha" path="res://protag/phone/diagnostics assets/16x9 frame.png" id="4_s6r45"]

[node name="DiagnosticsApp" type="Node2D"]
script = ExtResource("1_35om0")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(350, 512)
render_target_update_mode = 4

[node name="Icons" type="Node2D" parent="SubViewportContainer/SubViewport"]

[node name="HeartSprite" type="Sprite2D" parent="SubViewportContainer/SubViewport/Icons"]
position = Vector2(107, 91)
scale = Vector2(0.340506, 0.32781)
texture = ExtResource("2_35om0")

[node name="HeartText" type="Label" parent="SubViewportContainer/SubViewport/Icons/HeartSprite"]
offset_left = -23.4945
offset_top = -33.556
offset_right = 524.506
offset_bottom = 103.444
theme_override_font_sizes/font_size = 100
text = "MIKU MIKU"

[node name="TempSprite" type="Sprite2D" parent="SubViewportContainer/SubViewport/Icons"]
position = Vector2(99, 248)
scale = Vector2(0.160487, 0.160976)
texture = ExtResource("3_cbd4u")

[node name="TempText" type="Label" parent="SubViewportContainer/SubViewport/Icons/TempSprite"]
offset_left = 174.469
offset_top = -173.94
offset_right = 722.469
offset_bottom = -36.9395
theme_override_font_sizes/font_size = 100
text = "MIKU MIKU"

[node name="ProgressBar" type="ProgressBar" parent="SubViewportContainer/SubViewport/Icons"]
offset_left = 244.0
offset_top = 409.0
offset_right = 248.0
offset_bottom = 436.0

[node name="TestFrame" type="Sprite2D" parent="SubViewportContainer/SubViewport"]
z_index = -5
position = Vector2(175, 258)
rotation = 1.5708
scale = Vector2(0.7, 0.7)
texture = ExtResource("4_s6r45")
